# microservices-demo

./: .dockerignore  .gitignore
.github/workflows/: ci.yml
src/authservice/: .pylintrc  alembic.ini  main.py  pyproject.toml
src/authservice/alembic/: env.py
src/authservice/alembic/versions/: 2024_07_07_2119-2b53a3c79276_initial_migration.py
src/authservice/k8s/: auth-deploy.yaml  deployment.yaml  service.yaml
src/authservice/src/: config.py  database.py  models.py  routers.py  schemas.py  service.py  user_manager.py
src/authservice/src/services/notification/: config.py  service.py
src/authservice/tests/: conftest.py  helpers.py  test_auth.py
src/authservice/tests/api/auth/: test_login.py  test_logout.py  test_register.py  test_reset_password.py
src/authservice/tests/api/users/: test_me.py
src/authservice/tests/fixtures/: aioresponses.py  auth.py  db.py  memory_server.py
src/notificationservice/: .pylintrc  Dockerfile  main.py  pyproject.toml
src/notificationservice/k8s/: deployment.yaml  service.yaml
src/notificationservice/src/: config.py  routers.py
src/notificationservice/src/helpers/: messages.py
src/notificationservice/src/schemas/: reservation.py  token.py
src/rabbitmqservice/k8s/: ingress.yaml  rabbitmq-cluster.yaml
src/reservationservice/: alembic.ini  main.py  pyproject.toml
src/reservationservice/alembic/: env.py
src/reservationservice/alembic/versions/: 428c2c7d3c8a_initial_migration.py
src/reservationservice/src/api/: reservations.py
src/reservationservice/src/core/: auth.py  config.py  database.py
src/reservationservice/src/helpers/: utils.py
src/reservationservice/src/models/: reservation.py
src/reservationservice/src/schemas/: reservation.py  time_interval.py
src/reservationservice/src/services/: crud.py  db_operations.py
src/reservationservice/src/services/notification_service/: config.py  service.py
