[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["Daniil"]
packages = [{ include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
bcrypt = "4.1.2"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"} 


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pylint = "^3.2.5"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_mode="auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
