[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = ""
authors = ["Daniil"]
packages = [{ include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiosmtplib = "^3.0.2"
fastapi = {extras = ["all"], version = "^0.111.0"}
pydantic-settings = "^2.4.0"

[tool.poetry.group.test.dependencies]
pytest = "8.2.0"
pytest-asyncio = "0.21.2"
pylint = "^3.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
